--- a/_posts/winners/2023-07-11-집중이-아닌-초집중_1-(이준호 리더).md
+++ b/_posts/winners/2023-07-11-집중이-아닌-초집중_1-(이준호 리더).md
@@ -11,7 +11,12 @@ toc_sticky: true
 
 date: 2023-07-11
 last_modified_at: 2023-07-18
+
+audio_file : assets/amway/audio/2023-07-11-집중이-아닌-초집중_1-(이준호 리더).mp3
 ---
+
+
+<audio src="{{ page.audio_file | relative_url }}" controls loop></audio>
 
 ## 집중이 아닌 초집중-1 / 이준호 리더 (7/11)
 
