테스트 페이지 가림

--- a/_posts/amway/2020-12-24-snippets.md
+++ b/_posts/amway/2020-12-24-snippets.md
@@ -1,16 +1,16 @@
 ---
-title:  "[VS Code] 커스텀 자동완성, Snippets" 
+title:  "테스트 페이지" 
 
 categories:
   - amway
 tags:
-  - [Editor, VS Code]
+#   - [Amway]
 
 toc: true
 toc_sticky: true
 
-date: 2020-12-24
-last_modified_at: 2020-12-24
+date: 2023-07-18
+last_modified_at: 2023-07-18
 ---
 
 - `Ctrl + Shift + P` 하여 📄Markdown.json 검색 (나는 `md` 확장자의 마크다운 파일들에서 사용할 것이기 때문에)
