--- a/_posts/winners/biz_lecture/2023-07/2023-07-15-골든타임!-텐코아가-답이다-(임현주 리더).md
+++ b/_posts/winners/biz_lecture/2023-07/2023-07-15-골든타임!-텐코아가-답이다-(임현주 리더).md
@@ -52,8 +52,87 @@ last_modified_at: 2023-07-18
     9. 신뢰쌓기(좋은 인간관계)
     10. Smart-Communication
 
++ 학습단계 : 체력단련 7545
+  - 일주일(7)에 다섯번(5) 운동하라
+  - 건강이 바쳐주지 않으면 사업이 힘들다
+  - 함께하면서 커뮤니티를 만들어라
 
++ 학습단계 : 독서 30분
+  - 책으로 습득하는 지식은 신뢰감을 높인다
+  - 자기개발서를 통해 힘들 얻어라
+  - 내적인 자신감 상승
 
++ 학습단계 : WWDB-K 공식 교육채널 / 강의시청
+  - 제품과 사업에 관한 이해도를 높인다
+  - 사업성공에 대한 스피치를 통해 선행된 어려움 극복을 배운다
+
++ 학습단계 : 미팅참석 100%
+  - 온/오프라인 미팅에 대한 적극적인 참여자세
+  - 미팅 = 오아시스, 미팅을 통해 에너지를 얻는다
+  - 학습의 장, 누군가를 초대하는 프로모션 등의 기능
+
++ 행동실천 : 우리 제품 100% 애용
+  - 체험이 중요하다
+  - 빠른 브랜드 체인지를 통해 제품경험 쌓기
+  - 진정성 있는 고객추천의 밑거름
+
++ 행동실천 : 15~25명 소비자 클럽 만들기
+  - 플랫폼 회사 : 맥도널드, 스타벅스 등
+  - 협상은 감정을 건드리는 것
+  - 가격우위 VS 가치우위
+  - 암웨이는 감정적인 신뢰와 안전성을 전하는 것
+  - 필요와 실용, 커뮤니티 연결 플랫폼
+  - 경험, ESG, 가치, 연대의 연결 플랫폼 = 암웨이
+
++ 행동실천 : 사업설명-Amway가 뭐예요?
+  - 원화채굴 -> 구매채널 변경
+  - 소비자에게 질문하기
+  - 사업설명 멘트
+    1. 이런거 어디서 사요? -> 대답 : @팡, @스타
+    2. 한 달에 얼마써요? -> 갸우뚱?
+    3. 한 달에 35만원 정도 쓰면 캐쉬백 얼마받을까요? -> ?
+    4. 0.1% 돌려주는데, 35만원의 0.1%는 350포인트예요
+    5. 매달 350포인트, 1년 모으면 4200포인트에요
+    6. 암웨이에서 35만원 소비하면, 20만 포인트고
+    7. 20만 포인트의 3% 적립 6000원
+    8. 진짜 현금은 6000원 곱하기 1.7BV =10200월
+    9. 매달 10200원, 1년 모으면 122400원
+  - 질문 멘트
+    1. 350포인트 받을래? 10200원 현금 받을래?
+    2. 1년에 4200포인트 받을래? 12400원 받을래?
+    3. 구매후 90일간 사용후 1/2남았으면 환불되는 곳 이용? 환불안되는데 이용?
+    4. 회원 가입해서 마트 바꿔쓰라고
+    5. 많이 아써도 되는 것도 나중에 알려줄게.
+  - 분배의 반전과 공정성
+  - 장바구니 스마트 오더
+
++ Feedback : 상담
+  - 도전은? Not 등발 But 광야
+  - 사막의 안내자 = 스폰서
+  - 형제파트너에게 묻지 말고 스폰서에게 물어라
+
++ Feedback : 신뢰쌓기(좋은 인간관계 구축)
+  - 따뜻하고 행복함 쌓기
+  - 한 번 더 서로의 마음 헤아리기
+  - 암웨이는 제품의 유통이 아니라, 가치를 전하는 일
+
++ Feedback : Smart-Communication
+  - ABC 프로모션 (지역 프로모션)
+
++ 골든타임 : 24시간을 72시간으로 사는 법
+  - 나 자신의 회복시간을 아까워하지 마라
+  - 시간을 쪼개서 계획적으로 써라
+
++ 행복 : 마음의 평안 -> 소명의 불안
+  - 더 좋은 세상과 꿈을 향한 도전이 '행복'이 아닐까?
+  - 매일매일의 두려움을 극복하는 과정이 행복
+  - "마음속에 은밀히 체념을 키워온 사람들의 충고를 조심하십시오"
+
++ Why 10 Core?
++ Golden Time
+  - 계획?
+  - 할 수 있는 모든 행동!!
+  - 할까? 말까? > 해라!
 
 
 
