--- a/_posts/winners/biz_lecture/2023-07/2023-07-18-19세에-시작한-암웨이사업-(류지민 리더) .md
+++ b/_posts/winners/biz_lecture/2023-07/2023-07-18-19세에-시작한-암웨이사업-(류지민 리더) .md
@@ -10,7 +10,7 @@ toc: true
 toc_sticky: true
 
 date: 2023-07-18
-last_modified_at: 2023-07-18
+last_modified_at: 2023-07-19
 ---
 
 
@@ -19,3 +19,44 @@ last_modified_at: 2023-07-18
 
 ## 만 19세에 시작한 암웨이 사업 / 류지민 리더 (7/18)
 
++ 선택
+  - 암웨이 환경은 내 선택이 아님
+  - 부모님을 통한 경험. 2세 사업자
+  - 반강제적인 제품경험으로 다른 제품과 비교를 해보지 못함
+  - 미술 전공하면서 경쟁에 대한 불투명한 미래를 체험
+  - 이직율이 적은 회사
+    - 이직을 할 수 있도록 스팩을 만들어 주는 회사
+    - 사원을 성장 할 수 있는 회사
+    - 자신을 성장 시킬 수 있는 암웨이 회사
+  - "원하는 삶(미래)"에 대한 생각으로 선택의 확신
+  - 친구와의 5년 후가 다르기에, 다른 길을 걷게 됨
+
++ 시작
+  - 요리명장의 도전
+    - 파트너들에게 다른 모습을 보여주기 위한 도전
+  - 아티스트리 패셔니스타 도전
+    - 화장에 대해서 알고 나니 재미를 갖게 됨
+  - 내적/외적으로의 변화
+    - 내가 건강해지는 일 > 비즈니스가 됨
+  - 온/오프라인을 넘나드는 사업
+  - 내가 원하면 나의 컨텐츠로 만들 수 있는 즐거움
+  - 내 스팩을 만들어주는 회사 = 암웨이
+
++ 사업
+  - 아는 사람이 없어도, 능력이 없어도 할 수 있는 사업
+  - 스폰서가 닦아놓은 길과 시스템으로 가능한 일
+  - 모든 세대에게 기회가 되는 사업
+  - 이미 검증된 확실한 성공의 사업은 암웨이
+
++ 목적있는 삶, 의미있는 삶
+  - 건강이 없다면 돈도 의미 없음
+  - '꿈'이라는 단어를 놓치면 안된다
+  - '꿈' = '인생프로젝트'
+  - 아이가 어릴수록 빨리 성공해야 한다
+    - "나도 저런 부모님이 되야지"
+    - 아이들에게 집착하지 않고 하고 싶은 일을 할수있도록 지원하는 부모
+  - 남의 꿈을 따라적다가, 나의 꿈을 찾음
+  - 암웨이는 꿈을 꾸게 만드는 사업
+  - 파트너의 꿈이 보이기 시작하면서, 집중
+  - 암웨이의 가치는 "내 꿈"을 깨닫게 되는데 있음
+  - 내 이름을 걸고 이루어내는 일
