--- a/_posts/winners/biz_lecture/2023-07/2023-07-19-지금이라는-습관으로-Q12-다이아몬드를-향하여-(나까지마 가오루).md
+++ b/_posts/winners/biz_lecture/2023-07/2023-07-19-지금이라는-습관으로-Q12-다이아몬드를-향하여-(나까지마 가오루).md
@@ -19,3 +19,133 @@ last_modified_at: 2023-07-19
 
 ## 지금이라는 습관으로 Q12 다이아몬드를 향하여 / 나까지마 가오루 (7/19)
 
++ 좋아하는 일
+  - 작곡가 였던 삶에서 암웨이 사업을 하게 된 사연
+  - 암웨이가 주는 시간과 결정할 수 있는 자유를 통해 작곡가의 일을 더 잘 할 수 있게 됨
+  - 암웨이를 하면서 더 잘 할 수 있다
+  - 내가 정한 스케줄을 통해 스트레스 없이 좋아하는 일을 하게 되는 삶
+  - 예전에 음악을 떠나려고 걱정하던 사람들이 지금은 음악을 떠나게 됨(역전)
+  - 직업이 있다면 직업을 유지하면서 암웨이를 받아들이면 된다
+  - 좋아하는 일을 제대로 하려면 암웨이를 해라
+  - 내가 좋아하는 일을 하면서, 내가 좋아하는 사람들도 같이 암웨이를 하게 됨
+
++ 가오루상의 파트너
+  - 동경하는 사람을 따라하는 일
+  - 스폰서가 하는 일을 그대로 따라하려고 하기만 하면 된다
+  - 암웨이 도전에 질문하고 훌륭한 스폰서를 닮으려고 노력했다
+  - 심플한 힌트 : 내가 더욱 더 매력적인 사람이 되면 성공에 가까워진다
+  - 아마추어인 내가 암웨이에서 성공해서 성공한 사람, 프로를 보여주면 된다
+
++ 복장
+  - 뉴욕의 '탐브라운' 디자이너를 통한 옷
+  - 디자이너가 알아서 주는 옷
+  - 사람들이 내 옷을 보면 묻는다. "어디 옷이냐?"
+  - 암웨이도 마찬가지다. 계속해서 쓰고 있어서 변화한다면 사람들이 같이 물을 것이다.
+  - 우리가 암웨이 이미지를 만든다.
+
++ 뉴트리라이트 연구실
+  - 박사님만 들어갈 수 있는 방
+  - 정부 관계자만 들어갈 수 있는 방에 들어간 경험
+  - 암웨이 뉴트리라이트는 세계 최고이다.
+  - 암웨이와 비슷한 것을 만들 수 있는 기업은 없다
+  - 흉내는 낼 수 있으나, 원재료가 되는 식재료/원재료는 흉내낼 수 없다
+
++ 미국 비버리힐즈의 유기농법 과일/아채/쥬스를 파는 가게
+  - 7만원의 주스를 마시러 일부러 가는 사람들
+  - 주스를 먹고 건강해 짐을 깨닫는 사람들
+  - 뉴트리라이트는 그 보다 더 큰 가치가 있다
+
++ 뉴트리라이트로 인한 변화
+  - 나는 매일 젊어지고 있다
+  - 어머니는 매일 뉴트리션을 계속 습관적으로 드시고 계신다
+  - 어머니는 주변 사람들보다 건강하시다
+  - 뉴트리션을 일상적으로 하는 사람은 건강하다
+
++ 크라운 앰버서더
+  - "크라운 앰버서더가 되야지!"
+  - 특수한 사람만 성공하는 것이 아님을 증명하고 싶음
+  - 스피드를 내야 한다
+  - 암웨이를 알려줘야하는 시점! 지금이다!
+  - '지금'이라는 습관을 가진 사람에게는 '스피드'가 따라온다
+  - '나는 왜 안될까?'라는 습관을 가진 사람은 실패한다
+  - '어떻게 하면되죠? 뭘 하면되죠?'라는 습관을 가진 사람은 성공한다
+  - 생각하는 방법이 '다이아몬드'가 되느냐 마느냐를 결정한다
+  - PT가 되고 싶은 사람 6명을 찾는 것이 우선이다
+  - 하지 않는 사람이 있다고 해서 성공을 막는 것이 아니다
+  - 하려는 사람이 없다면, 채널을 바꿔서 하려는 사람을 찾아라
+  - 상대방이 얘기한 것에 대한 받아들임이 중요하다
+
++ 사람의 심리
+  - 일본 넘버원 가수와의 만남
+  - 식사자리의 약속 : A타입 과 B타입
+  - "갈께요. 할께요. 아, 안타깝네요" VS "잠깐만요. 아, 안되겠네요"
+  - 상대방에게 도와주고 하고 싶은 심정을 전달하는 커뮤니케이션
+  - 부정적인 심리가 아닌 긍정적인 심리를 전하는 것이 중요함
+  - 스케줄은 나중에. 의욕을 꺽는 반응을 멀리하라
+
++ 암웨이 매력 전달
+  - 일본 평균연령에서 60세에 은퇴해서 할 수 있는 미래를 전달
+  - '미래 인생'에 대해서 생각하라
+  - 누구든지, 지금 바로 할 수 있는 일 = 암웨이
+  - 좋은 제품을 다른 사람에게 알려주고 > 네트워크를 만들고 > 수입
+
++ 네트워크의 힘
+  - 축구선수와의 만남 > 직접꺼낸 '딸기'
+  - 지인이 만든 소중한 '딸기'에 대한 믿음과 나눔
+  - 네트워크의 지인들을 통해 그 딸기를 찾아내는 놀라움
+
++ 시작
+  - 앞으로 인생의 첫 날은 바로 오늘!
+  - 암웨이는 국가사업이다
+  - 암웨이가 내놓는 제품은 품질이 좋다
+  - 훌륭한 제품을 집에 배달 받고, 돈을 받는... 일반 마켓에서는 상상할 수 없음
+
++ 거절당하는 것
+  - 거절을 신경쓰지 마라
+  - 주변에서 암웨이에 대해 신경쓸 필요없다
+  - 암웨이를 하면 '점점 멀어져간다'는 말이 안된다
+  - "암웨이를 싫어하는 사람은 필요 없어"
+  - 암웨이를 좋아하는 사람을 변화시키려고 노력한다
+  - 누군가를 위해 도움이 되고 힘이 될 수 있는 사람이 되어야 한다
+  - 사람들이 성공하면 나한테도 보수가 들어 온다. 이러한 플랜은 도움이 된다
+
++ 누군가를 돕는 일
+  - 최선을 다해 누군가를 위해 돕는다
+  - 돈을 위해 열심히 하는 것이 아니라, 사람을 위해서 이다
+  - 누군가가 풍족해지면 내가 온 보람이 있는 것
+  - "여러분을 위해서"라는 말
+  - 암웨이는 "여러분을 위해서" 좋은 제품을 만들고, 풍요로워지기 위해서
+  - 다른 기업은 여러분을 위해서 존재하지 않는다
+
++ XS드링크와 XS껌
+  - 일본에서 인기
+  - XS껌 : 롯데와 암웨이와 콜라보레이션
+  - 롯데가 출시했을 때, 우리의 라이프스타일은 변하지 않는다
+
++ 목표
+  - 다이아몬드는 상처가 나지 않는다
+  - 여러분들이 다이아몬드가 되려고 한다면 될 수 있다
+  - 반드시 되야한다는 마음이 필요하다
+  - "되고 싶어"가 아니라 "되야 한다"가 되어 야한다
+  - 가방 안에 열쇠. 가방 안에 열쇠가 있는 것은 알지만 못찾는 것이 힘들고 짜증남.
+  - 다이아몬드가 되기 위한 열쇠를 찾는 것이 힘들지만 포기하지 않아야 한다
+  - 모두가 다이아몬드가 되기 위한 과정이다.
+  - 50억과 200만원
+    - 우리 안에서 일어나는 문제를 도망가면 안된다
+    - 가방 속에는 반드시 열쇠가 있다
+    - 무슨 일이 있어도 포기 하지 말고 '다이아몬드'로 가야 한다
+  - 여러분은 흔들림 없는 암웨이를 선택했다
+  - 할 수 있기 때문에 선택했고, 다이아몬드가 될 수 있다
+  - 누구나 다 달성 할 수 있는게 다이아몬드이다.
+
++ 암웨이에서 성공하는 사람들
+  - 처음에는 보통, 일반 사람들이다
+  - 암웨이를 통해 최고의 나 자신을 만든 것
+  - 지금의 여러분이 최고가 되는 여러분이다
+  - 내가 어떤 사람인지 모르는 사람들이 많다
+  - 최고의 나를 만들기 위해 무엇을 하면 될런지?
+  - 첼리 채플린
+    - 최고의 영화? "다음 작품이다!"
+  - 지금의 나 보다 3년 후의 내가 더 대단해 질 것을 믿는다
+  - 여러분도 믿어라! 여러분도 할 수 있다!
+  - 렛츠 고 다이아몬드~!
