--- a/_posts/winners/biz_lecture/2023-07/2023-07-22-리더스OM-STP-(강설화 리더).md
+++ b/_posts/winners/biz_lecture/2023-07/2023-07-22-리더스OM-STP-(강설화 리더).md
@@ -10,7 +10,7 @@ toc: true
 toc_sticky: true
 
 date: 2023-07-22
-last_modified_at: 2023-07-23
+last_modified_at: 2023-07-24
 ---
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/x7JG-ygefoA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -20,4 +20,86 @@ last_modified_at: 2023-07-23
 ### 부제 : 대기업 연구원에서 암웨이 사업가로, 이유있는 변신
 
 + "잘난 건 타고나야 되지만 잘 사는건 나하기 나름"
-  - 
+  - 하지만 아이를 낳고 경제적으로 힘들다는 것을 알게 됨
+  - 아이를 낳고 암웨이를 아게 됨 -> 홈미팅의 경험
+  - 사람들과의 교류가 어색함 But, 할 수 있는 걸 해보자! (암웨이 미팅)
+  - "내가 모르는게 많구나!"를 느낌
+  - 내 전공이 삶을 만드는데는 쓸데 없음을 느낌
+  - 딸에게 그냥 '엄마'로 살아가는 인생을 물려주고 싶지 않았다
+  - 암웨이를 깨닫고, 6%일 때 퇴사 결심
+  - 대기업 연구원이었지만, 엄마가 되는 순간 모든 것이 변화 됨
+
++ Life Cycle Financial Planning
+  - 정작 돈을 모을 수 있는 시기에 돈을 모을 수 없다.
+  - 아이들 키울 때는 돈을 모으는 것 자체를 생각 할 수 없다
+  - "부모는 아이를 낳기로 선택했으나, 아이는 선택하지 않았다"
+  - 아이는 부모를 부양할 의무는 없다
+
++ 결혼자금 예상 14억
+  - 결혼 : 1억
+  - 비상금 : 1천만원
+  - 주택 : 3억
+  - 양육 : 2억7천만원
+  - 노후 : 7억 2천만원
+  - 미래의 돈을 준비하는 시스템에 들어가야 한다
+  - 생필품 값도 많이 오름 -> 경제적으로 어려움
+  - "중장년층 '울며 희망퇴직'... '투잡 가능'은 최다"
+  - 3년 뒤 경제위기가 온다. 우리는 준비해야한다
+
++ 코닥모멘트 (Kodak moment)
+  - 아날로그 필름의 몰락
+  - 디지털필름의 기술을 내몰았던 코닥은 몰락함
+  - YAHOO의 몰락
+
++ Amway
+  - Products
+  - Opportunity
+  - Possiblilities
+
++ 부자 아빠와 가난한 아빠
+  - 왼쪽에서 오른쪽으로!
+  - 대기업을 아무리 다녀도, 상황은 변화되지 않음
+  - 지금 얼마를 버는지가 중요하지 않다. 미래의 수입이 중요하다
+  - 사업을 하고 있다고들 하지만, 본인이 쉰다면 수입이 없다면 그건 미래의 돈이 아니다
+  - 시스템을 만들거나, 시스템을 사거나, 시스템을 올라타라!
+  - 우리는 시스템에 올라타야한다!
+  - 현재의 돈을 벌듯이 한다면 미래의 돈을 준비하지 못한다
+
++ 노동자 VS 자산가
+  - 내가 일해야 돈을 번다 VS 시스템이 돈을 번다
+  - 돈을 벌 수 있는 시스템의 유무
+  - 생산자와 소비자는 어느 시대에나 존재함
+  - 네트워크까지 내 것이 될 수 있는 '플랫폼'회사는 없다 > 오직 '암웨이'뿐이다
+
++ 성공하는 플랫폼 기업
+  - 소비제 기업
+  - 죽을 때까지 쓰고 죽을 수 밖에 없는 구조
+  - 'Anywaymoney'
+  - 암울한 코로나 시기에도 다른 소비를 줄여도, 생필품은 줄일 수 없다
+
++ 일반마트 vs 암웨이마트
+  - 어짜피 가는 슈퍼마켓에서 소비는 버리는 돈
+  - 하지만 암웨이마트는 어짜피 써야하는 생필품 소비 안에서 돈이 된다
+
++ 반복되는 생필품
+  - 사람들은 매일 생필품을 사용하기 위해 일정 금액을 지출한다
+  - 일상적인 지출이 나에게 수입으로 전황되는 방법
+  - "연결 비즈니스"
+    - 소비를 통한 경험의 공유와 연결로
+    - 수입을 창출하는 개인 플랫폼 비즈니스로
+
++ 암웨이라는 기업
+  - 60년 전부터 해오던 ESG
+  - 지금 준비하는 돈이 미래의 돈이 된다
+  - 노동소득은 자산소득을 따라 올 수 없다
+
++ "부의 격차 보다 무서운 것은 꿈의 격차다"
+  - 엄마의 꿈이 커지면 자녀의 꿈은 자라난다
+
++ 스타벅스와 이디야
+  - 스타벅스 근처에서 항상 성공했던 매출2위 이디야
+  - 암웨이도 마찬가지다. 암웨이라는 시스템 안에 머물 면 우리가 스타벅스가 될 수 있다
+
++ 망설임
+  - '코닥모멘트'로 미루지만 않느다면 성공한다
+  - 아직 늦지 않았다.
