--- a/_posts/winners/biz_lecture/2023-07/2023-07-24-초대가-답이다-(김윤정 리더).md
+++ b/_posts/winners/biz_lecture/2023-07/2023-07-24-초대가-답이다-(김윤정 리더).md
@@ -18,5 +18,152 @@ last_modified_at: 2023-07-24
 
 ## 초대가 답이다 / 김윤정 리더 (7/24)
 
-+ 
-  - 
++ 로버트기요사키 / 부자아빠의 비즈니스 스쿨
+  - 네트워크 마케팅의 첫 번째 가치는 '삶을 변화시키는 교육 시스템을 갖고 있다는 것이다.
+  - 다른 곳에서는 받을 수 없는 최고의 살아있는 비즈니스 교육이다.
+  - 암웨이는 나의 내/외적인 변화를 이끌어 낼 수 있다.
+
++ 사업을 가장 어렵게 하는 비결
+  1. 미팅에 소홀히하는 한다
+    - "내 힘으로 나 혼자한다"는 착각
+    - "난 말 못 해 / 난 시간이 없어"라는 오해가 풀리지 않았을 때..
+    - 훌륭한 시스템을 두고 맨땅에 헤딩하는 것과 마찬가지임
+  2. 시스템의 중요성을 간과하거나, 신뢰하지 못한다는 의미
+    - 미팅이 사업 성장에 별다른 도움이 안된다고 생각 ('다 안다' 병)
+    - 반찬투정하듯이 본인이 듣고 싶은 강의 만을 고른다
+    - 어떤 미팅이듯 나에게 도움이 된다
+    - "미팅은 시간낭비다' -> 비즈니스를 제대로 이해하지 못 했을 때
+
++ 잘 되는 사람은 있다
+  - 미팅 초대
+  - 미팅 초대에 초집중하는 사람이 빠르게 성장한다
+  - 빠르게 성장하는 사람들의 특징 = 미팅 셀프 후원 = 미팅 타인 후원
+  - 초대가 왜 중요한지 알아야, 초대에 초집중 할 수 있다
+  - 미팅의 소중함을 아는 사람이 초대에 미칠 수 있다
+  - 돈을 버는 주체(인간) VS 돈을 만드는 주체(시스템)
+    - 인간 : 노동을 통해 돈을 번다
+    - 시스템 : 자산시스템을 통해 돈이 들어오는 구조를 만듬
+    - 시스템을 활용하려면, 미팅을 반드시 활용해야 한다
+  - 코로나시기에 성장한 이유
+    - 온라인 미팅의 집중하는 힘
+  - 오프라인 대면 미팅 VS 온라인 비대면 미팅
+    - 보는 힘 / 듣는 힘 / 오감을 자극하는 환경
+
++ 매일/매달/미팅이 있는 이유
+  - 후원의 장소를 미팅장소로 바꿔라
+  1. 브랜드 체인지 = 사고방식 체인지
+    - 암웨이마트가 주는 혜택이 무엇인지 정확하게 인지하는 것
+  2. 시스템 사업 = 복제 사업
+    - 탑리더를 그대로 따라하는 환경 -> 부족한 내가 그대로 복제하며 성장
+
++ 네트워크
+  - 핀이 상속되는게 아니라, 네트워크가 상속된다.
+  - 네트워크??
+    - 시스템 속에서 비로소 살아 있을 수 있다.
+
++ 미팅은 어떤 곳인가?
+  1. 미팅은 편견이 깨지는 기회
+    - 미팅은 거절을 받아도 섬기는 리더십을 발휘하여 초대하라
+    - 내 노력보다 훨씬 더 빠르게 후원할 수 있다.
+  2. 미팅은 내가 변화되는 현장
+    - 내가 안정적으로 변화되는 것을 배움
+    - 형제 파트너와 함께 배움
+  3. 미팅은 스폰서님이 늘 계시는 장소
+    - 성공자 옆에서 배움의 기회
+  4. 미팅 참여는 리더와 소비자를 구분하는 기준
+
++ 미팅에 관한 중요한 사실
+  1. 초대 없이 혼자들으면 세미나, 초대해서 같이 들으면 사업
+  2. 암웨이 사업에서 중요한 것은 1번 미팅, 2번 미팅....미팅!
+  3. 미팅은 학습만 하는 자리가 아니라, 변화하고 성취하는 자리다
+  4. 미팅에 일찍 와서 앞자리에 앉는 사람이 되어라
+
++ 소비자 미팅의 종류
+  - 1대1 미팅
+    - 초간단 사업설명으로 호기심 주기
+    - 간결하게 오해 풀어드리기, 부자문센 초대
+  - 1대2 미팅
+    - 충분히 사전에 스폰서 프로모션하기
+    - 스폰서께 대화시간 할애하기 (뎁스파트너 지원사격)
+  - 홈미팅
+    - 리더십 트레이닝의 생생한 현장
+    - 다시 오고 싶은 추억을 주는
+    - 맛있는 음식과 정보가 가득한 미팅
+  - OM(오픈미팅, Opportunity meeting)
+    - 암웨이를 전혀 모르는 소비자 초대
+    - 이미 사용하고 있는 제품에 대한 정보 리마인드
+    - 객관적 정보를 나누는 기초 사업설명 시간
+
++ 초대를 위한 만남의 기본 자세
+  1. 카톡과 전화는 만남 약속을 잡는 용도로만
+  2. 잔체 모임에서 암웨이 사업 기회를 전하지 않기
+  3. 동의 없이 몰래 초대하지 않기
+    - 암웨이를 숨기고 초대하면 편견이 강화될 수 있다
+  4. 만남약속 보다 미팅참석 우선
+  5. 나보다 나은 사람을 초대하려고 애쓰기
+    - 배우고 닮고 싶은 사람
+  6. 부부 중심으로 후원하기
+
++ 나 + Amway
+  - 둘 다 호감이 있어야 후원이 수월하다!
+  - 섬기는 리더십으로 나에 대한 호감을 키우고, 친숙한 감정 키우기
+
++ [이솝우화] / "해와 바람"
+  - 따뜻한 리더십이 상대방의 마음을 자발적으로 변화시킬 수 있다
+  - 햇님 같은 리더십으로 미팅초대
+
++ 초대가 잘 되는 리더의 자세
+  1. 첫 인상 4초
+    - 상대방에게 암웨이의 첫 인상은 '나 자신' (메신저)
+    - 전체적인 외모, 목소리, 내용 보다도 '표정'이 가장 중요
+    - 셀프 이미지를 원하는 핀의 모습으로 바꾸기
+  2. 경청과 공감
+    - 다른 생각하지 않고 그 순간은 오직 상대방에게 집중
+    - 핫버튼 찾기
+      - 집중하는 태도는 비언어적 표현으로 드러난다
+  3. 진심과 관심
+    - 정성은 통한다 (대충하는 태도 버리기)
+    - 관심은 곧 배려이자, 관찰력이다.
+    - 관찰 = 사랑
+  4. 대화에서 이기지도 말고 지지도 않기
+    - 따지거나, 매달리거나, 간청하거나, 시간이 많은 티 내지 않기
+  5. 질문을 통해서 상대방의 의중과 시간 파악하기
+    - F.O.R.M (가족, 직업, 주말 취미, 경제 상황)
+  6. 상대방의 태도와 센스에 대하여 칭찬하기
+    - 칭찬은 고래도 춤추게 한다. 예쁜 말은 마음을 연다
+  7. 강도보다 빈도! 짧게 보더라도 자주!
+    - 가랑비에 옷 젖듯이 한결같이 초대 초대 초대!
+  8. 손해가 복이다. 소탐대실 하지 않기
+
++ '초대의 달인' 리더의 특징
+  1. 내가 먼저 모든 미팅 초집중 사수
+    - 미팅에 안 오는 사람이 초대르 ㄹ잘 하는 경우는 없다
+    - No meeting? No success!
+  2. 초대 명단에 생각과 에너지를 집중
+    - 내가 선명하게 상상한 대로 결과가 나온다
+    - 초대보다 다른 것에 더 많이 신경 쓰면 초대 열매가 적다
+  3. 올 때까지 끝까지 초대하기
+    - 초대보다 더 빠른 후원법은 없다는 것을 안다
+    - 사람의 마음처럼 잘 변하는 것은 없다!
+
++ 네트워크를 만드는 요소는 '사람'이다.
+  - 내 사람을 얻어야, 네트워크가 안정화 된다!
+  - 사람과 관계에 초집중
+
++ 에너지 / 분위기 / 관찰력
+  1. 에너지
+    - 그 사람의 에너지에 끌려 사람들이 초대된다
+    - 에너지는 미팅의 현장에서 채워진다.
+  2. 분위기
+    - 될 것 같은 분위기가 있어야, 된다는 마음이 생긴다
+    - 하면 성취할 것 같은... 응원단장 같은 리더가 필요하다
+  3. 관찰력
+    - 섬기는 리더십에서 가장 중요한 단어가 '관찰력'
+    - 상대방에게서 불편하거나 필요한 것을 살펴보는 것
+    - 사랑하는 마음으로 관찰할 때 그들의 마음을 얻을 수 있다
+
++ 암웨이는 계몽사업
+  - 나를 변화시켜야 하는 비즈니스
+  - 그리고 변회된 내 모습이 다른 누군가를 또 변화하게 돕는 사업
+  - 그렇기에 기존에 다른 새로운 환경에 접속해야 한다.
+  - 그곳이 바로 이 곳, 미팅의 자리다
