--- a/_posts/winners/biz_lecture/2023-07/2023-07-24-텐코어-(김윤정 리더).md
+++ b/_posts/winners/biz_lecture/2023-07/2023-07-24-텐코어-(김윤정 리더).md
@@ -73,37 +73,131 @@ last_modified_at: 2023-07-25
 
 2. 책 읽기
   - Why
+    - 내 심장을 뜨겁게 불태울 강렬한 확신을 불어넣기 위해 (긍정적 사고방식)
+    - 한결같은 몰입과 인내를 유지하기 위해 (용기와 자신감)
+    - 소비자와 파트너에게 전할 효과적인 메시지를 찾기 위해
   - How
+    - 하루에 30분, 누군가에게 이 내용을 전달한다는 생각으로 꼼꼼하게 읽는다
+    - 이 글을 통해 내 사업에 적용할 포인트를 찾는다
+    - 좋았던 부분은 따로 필기하여 핵심노트 만들고 사업에 활용하기
+  - 추천 책 리스트
+    + 비교적 쉽게 읽히는 책
+      - 심플리 리치
+      - HOPE(호프)
+      - 부자아빠의 21세기형 비즈니스
+      - 카피켓 마케팅
+      - 파이프라인 우화
+      - 하우스홀드 골드
+      - 열심히 일해도 가난해지는데는 이유가 있다
+      - 부자들의 시스템
+      - 나를 바꿀 자유
+    + 비교적 곱씹어 읽어야 하는 책
+      - 더불어 사는 자본주의
+      - 리치처럼 승부하라
+      - 이웃집 백만장자
+      - 성공하는 사람들의 7가지 습관
+      - 영원한 자유기업인
+      - 부자아빠의 비즈니스 스쿨
+      - 돈의 속성
+      - 돈(보도 새퍼)
+      - 리더십 골드(존 맥스웰)
 
 3. 음원 듣기
   - Why
+    - 이미 성공한 리더의 경험을 내 것으로 체화 시키기 위함
+    - 차분한 심장에 즉각적인 열정을 주유하기 위함 (두근대는 심장 만들기)
+    - 동일한 환경에 있는 후워대상에게 공유해주기 위함
   - How
+    - 다른 일 하며 듣지 않기 (음원에 집중할 수 있는 환경 만들기)
+    - 다 듣고 기억에 남는 부분을 요약하여 소비자나 파트너에게 감동 전하기
+    - 나만의 18번 음원을 2-3가지 정해두고, 반복하여 듣기 (외울 정도로)
   
-4. 미팅 참석하기
+4. 미팅 참석하기 (별표5개)
   - Why
+    - 텐코어 중 가장 중요한 항목이자, 사업자와 애용자를 가르는 기준
+    - 리더의 자세를 배우고 표현하는 도구
+    - 복제사업의 이유 (붕어빵 틀 레버리지)
   - How
+    - 그룹 공식 미팅 > 업라인 주최미팅 > 스폰서 주최미팅 > 본인 주최 미팅 순
+    - 수동적 참여가 아닌, 내 사업 확장과 홈미팅을 위한 적극적 경청
+    - 함께 들을 사람을 초대하기 (혼자 들으면 세미나, 함께 들으면 사업)
   
 5. 제품 애용하기
   - Why
+    - 이론이 아니라 가슴으로, 제품 감동을 느끼기 위해
+    - 나는 걸어 다니는 암웨이 홍보대사 이기 때문에 (오너마인드)
+    - 사용법과 실 사용 후기를 공유하기 위해
   - How
+    - 카다로그 및 제품 미팅에서 학습 후 기억하며 사용하기
+    - 최대한 빠른 시일 내에 전 제품 브랜드체인지하기
+    - 적극적으로 주위에 자랑하면서 사용하기 (만남에서 자랑, 카톡 공유, SNS인증샷)
+    - 집을 쇼룸으로 활용하기
   
 6. 애용자 팀 만들기
   - Why
+    - 매달 스스로 구매하여 쓰는 적극적인 소비자 = 애용자
+    - 안정적인 연금 같은 수입의 초석을 만들기 위함 (15-25명)
+    - 애용자는 사업자가 될 가능성이 매우 높음 (혹은 적극적 소개)
   - How
+    - 어떻게 구매하는지 방법을 확실 가르쳐 드리기 (에이클릭스, 장스오, 프로모션 등)
+    - 정기적으로 구매하실 수 있도록 제품정보와 강점을 확인사살!
+    - 정성과 관심을 꾸준히 드리기 (평생 내 사람으로 만들기 위해서)
   
 7. 사업설명 하기
   - Why
+    - 사업을 폭발적으로 성장시키기 위한 관문 (파트너를 만드는 방법)
+    - 편견을 걷어내고, 왜 암웨이 사업과 제품이 필요한지에 관한 정보 전달
+    - 캐시백 받는 소비자를 만드는 가장 빠른 방법 (브론즈핀)
   - How
-  
+    - 내가 가장 강력하게 전달할 수 있는 부분 먼저 언급 (나의 와이, 내가 느낀 매력)
+    - 10명에게 하면 2명이 알아듣는다
+    - 핵심만 짧게, 대화하듯이 *주입식설명 X
+    - 수입의 속성 / 유통의 변화 / 마트 바꾸기 / 현금 캐시백 / 만족보증제 / 역전가능 / 무한대수입 /시스템 사업
+
 8. 상담하기
   - Why
+    - Helping people live better lives의 철학과 일맥상통하는 스폰서링의 기본
+    - 내 사업의 방향과 목표를 객관적으로 점검하기 위하여
+    - 경험자의 실펵을 방패삼아 시행착오를 줄이기 위하여
   - How
+    - 매일, 목표에 맞는 행동 계획을 나누고 피드백 진행
+    - 시스템에 맞게 사업에 플래티넘 이상의 스폰서와 상담하기
+    - 마음을 열고 겸손하고 진솔하게 상담 진행하기
   
 9. 신뢰 쌓기
   - Why
+    - 제품과 사업, 그리고 나에 대한 상대방의 신뢰도를 높이기 위함
+    - 가랑비에 옷 젖듯이 조금씩 마음의 각도가 바뀌어 애용자, 사업자가 됨
+    - 단 한 번의 판매가 아니라, 지속적인 애용자를 만드는 일이므로
   - How
+    - '손해가 복이다, 섬기는 리더십, 소탐대실 하지 마라' : 탑리더 메시지 기억하기
+    - 불평 불만에도 적극적으로 대처하고, 솔선수범 하는 자세 보이기
+    - 홈미팅을 통해서 마음을 얻고, 사랑의 언어 체크하기
+      - 인정하는 말 / 함께하는 시간 / 스킨십 / 봉사 / 선물... 5가지의 사랑의 언어
   
 10. E커뮤니케이션
   - Why
+    - 온라인 커뮤니케이션 툴을 활용하며, 사업에 가속도가 붙는다
+    - 코로나 시대에 가장 활용이 도드라졌던 텐코어 중 하나!
+    - 다양한 자료를 빠르게 적용 및 전파하기 위하여
   - How
+    - 화상미팅, A-live, A-contents, 암웨이 공식유튜브 등 적극적 활용
+    - 라이브방송 클립 적극 활용
+    - 암웨이 홈페이지 메인화면 공지사항 확인 > 프로모션 정보 전하기
   
++ 템코어 실천이 주는 유익
+  - 성공 습관 장착
+  - 자유로움 속에서의 '규칙적' 삶 연습
+  - 사업의 단순화 (시스템)
+  - 나를 그대로 복제하는 파트너 생산
+  - 배워서 남주는 하루 (Giver)
+  - 소통능력, 발표력, 자기 표현력 등 자기계발
+  - 운동과 마인드 관리를 통한 외적/내적 성형
+
++ Quality는 Quantity로부터 채워진다
+  - 노력의 양을 쌓았을 때 내공의 기반이 닦인다.
+  - 천리 길도 한걸음부터 한다.
+  - 그 노력의 양을 충분이 다했을 때, 퀀텀점프 할 수 있다
+
++ 하루동안 나를 성장시키는 10가지!
+  - 때로는 사소한 일이 위대한 결과를 가져옴을 볼 때, 사소한 일이란 없다는 생각이 든다!
