--- a/_posts/winners/biz_lecture/2023-07/2023-07-24-면역과-혈관관리-(김정아 리더).md
+++ b/_posts/winners/biz_lecture/2023-07/2023-07-24-면역과-혈관관리-(김정아 리더).md
@@ -15,6 +15,187 @@ last_modified_at: 2023-07-25
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/SmAB4InckbM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
+
+
 ## 면역과 혈관관리 / 김정아 리더 (7/24)
 
-+ 
+### 건강이란?
++ 건강이란 무엇인가?
+  - 대부분의 사람들은 질병의 부재를 건강이라고 생각한다
+  - WHO에서 제시하는 건강이란?
+    - 신체적 건강 + 정신적 건강 + 사회적 건강
+    - 이 3가지가 조화를 이룬 상태
+  - 정신적으로 건강하지 않으면 신체적으로 건강하지 못하다
+  - 사회적 건강이 위협 받는 시대
+
++ 아는 만큼 건강이 보인다!
+  - 지루성 피부염
+    - 사람들이 놀랄만큼
+    - 자가면역 질환으로 고생함
+  - 스테로이드 주사를 맞으면 정상으로. (=마약과 같은 현상)
+  - 건강에 대한 지식이 없었을 때, '스테로이드'에 대한 부정적인 것을 알게 됨
+  - 스테로이드를 끊고 더 심한 시기에 '뉴트리라이트'를 알게 됨
+  - 자가면역 질환으로 인한 암 발병
+  - 공부를 하게 되면서 '뉴트리라이트'의 우수성을 알게 됨
+  - '뉴트리라이트'를 통해 변화되는 내 모습을 발견하게 됨
+  - 항암치료는 정말 힘든 치료이지만, 뉴트리라이트를 통해 힘들지 않음을 경험
+
++ 건강의 매커니즘
+  - 우리 몸은 매일 100억개 이상의 세포가 세대 교체
+  - 세포마다 수명 주기가 있으며 세포의 사멸과 재생의 과정을 반복하며 생명유지
+  - 세포의 세대 교체가 정상적으로 이루어지려면 많은 영양소가 필요
+  - 깨끗하고 영양가 있는 혈액이 공급되면 혈관도 뚫리고 세포도 양질의 영양소를 공급받아 정상적으로 재생
+  - 세포가 건강하게 재생되면 조직이나 오장육부가 건강해진다.
+  - 혈액이 깨끗해지려면 음식의 소화과정에서 나오는 노폐물 인체의 외부로부터 유입되는 각종유해물질 세균 바이러스를 퇴치 청소해 주는 백혈구 기능 중요 = 면역력
+  - 즉 면역력이 좋아지려면 깨끗한 혈액과 원할한 혈액순환이다.
+    1. 따뜻한 체온
+    2. 탄수활물을 비롯한 열량 음식 적당히 섭취. 소시 권장
+    3. 백혈구=면역세포. 세포가 활발하려면 양질의 에너지원과 효소 천연비타민과 메네랄
+
++ 질병이 생기는 핵심 이유
+  - 혈액이 탁하고 순환이 원할히 안되면서 세포가 병들거나 변형되기 때문
+  - 세포가 병드는 이유는 혈액을 탁하게 만드는 '독소'때문
+  - 잘못된 식습관, 외부로부터 들어오는 유해물질, 약물의 오남용, 스트레스로 인한 독소는 자연치유력(면역력)을 약화시켜 신경계, 호르몬계, 면역계의 불균형을 초래한다.
+  - 결론은 '면역력'이다!!
+
++ 혈관
+  - 사람은 혈관과 함께 늙는다
+  - 혈관(혈액이 이동하는 통로) - 동맥, 모세혈관, 정맥
+  - 건강의 비결은 깨끗한 혈액이 좌우한다
+
+
+### 면역력이란?
++ 신체의 외부로부터 들어오는 인체의 유해한 병원균이나 독소로부터지키는 인체 방어력이다
+
++ 면역력 (자연치유력)
+  1. 깨끗한 혈액(건강한 세포재생) - 염증치유, 체지방분해
+  2. 원할한 혈액순환을 위한 혈관관리
+
++ 면역세포가 가장 많이 모여있는 소장관리
++ 체온을 높혀라 -> 저체온은 혈관과 신경파괴
++ 부족한 영양소 보충하기(천연비타민 ㅅ힉사 중간에 섭취)
++ 비타민 미네랄이 풍부해야 독소배출 효소 활성화
++ 양질의 식사가 중요하다!!
+
+
+### 우리가 먹는 음식의 현주소
++ 토양의 산성화
+  - 농산물의 질 저하
+  - 대기오염으로 인한 산성비
+  - 화학농법 재배(과다한 농약, 비료 사용)
+  - 대량생산, 속성 재배, 하우스 재배 등
++ 50년 사이, 영양가가 많이 떨어져버린 채소
+
++ 인스턴트, 편의식품, 서구화된 식생활, gmo식품
++ 항생제 중금속 농약 방부제 화학첨가물
++ 유통 과정에서 영양소파괴
++ 조절소 (비타민, 미네랄) 부족으로 노폐물 과다
+
+
+### 천연 비타민 VS 합성 비타민
++ 분자구조는 같으나 합성비타민의 경우 몇몇 개별요소 등의 결합이므로 이들은 전혀 다르다
+
++ 천연비타민
+  - 식물내재 영양소 각종영양소와 보조요소를 그대로 섭취
+  - 과다섭취시 부작용 없음
+  - 천연비타민과 미네랄 특허내주지 않음
+
++ 합성비타민
+  - 연구실, 제약회사에서 석유제품으로 저렴하게 제조
+  - 인체에서 이물질로 인지
+  - 비타민 보조요소 부재로 인체영양소 고갈
+  - 약물의 상습복음 같음
+  - 별도의 특허
+
+
+### 파이토 케미컬 (식물내재영양소)
++ 2만5천가지 항산화물질 식물영양소
+  - 채소와 과일의 색은 자외선으로부터 자신을 보호
+  - 바이러스나 곰팡이세균 등을 물리치기 위해 생성한 자기방어 수단
+
+
+### 뉴트리라이트
++ 뉴트리라이트 철학
+  - 칼 렌보그
+  - "믿을 수 있는 원료는 스스로 만들 수 밖에 없다"
+  - "어떠한 식물을 재배하느냐는 것보다 어떠한 땅에서 재배하는지가 더 중요하다" 
+
++ Why Nutrilite?
+  1. 자사 유기농 농장에서 재배
+  2. 식물을 그대로 농축
+  3. 안전한 원료를 위해 씨앗에서 완제품 까지
+  4. 1934년부터의 도전 87년 이상의 역사
+
++ 더블엑스
+  - 14가지 비타민, 10가지 미네랄.
+  - 20여가지 식물원료에서 전달하는 19가지 식물영양소 함유
+  - 인체 적용시험을 통해 활성산소 감소
+  - 2만번이상 테스트로 원재료 선정
+  - DNA 손상 줄임
+  - 면역력의 기본, 장내환경
+    - 장누수증후군
+    - 장벽의 틈으로 독소가 침투
+    - 인체 건강의 뿌리가 되는 장
+
++ 유산균과 식이섬유
+  - 좋은 유산균의 기준
+    - 과학적으로 검증된 균주
+    - 뛰어난 생존력과 부착력
+    - 신 바이오틱스 배합
+    - 장내유익균의 먹이 / 장내 환경 개선, 변비해결, 독소배출(대장)
+    - 건강한 혈당유지(소장)
+
++ 푸로틴
+  - 대두, 밀, 완두를 원료로 하여 신체조직 구성의 필수 영양소인 단백질과 9가지 필수 아미노산 11가지 불필수 아미노산물을 풍부하게 제공하는 순식물성 단백질 보충제품
+  - 아미노 스코어 100
+  - 혈액내 항체 형성 관여함으로써 우리 몸의 면역력에서 매우 중요한 부분 담당
+  - 부족시 산소도 부족. 
+
++ 아세로라 C
+  - 아세로라 체리의 비타민C, 굴껍질분말 혼합물
+  - 비타민C는 항산화 작용을 통해 유해산소로부터 세포를 보호
+
++ 혈행건강 오메가3 / 징코엠
+  - 일상생활에서 부족하기 쉬운 EPA 및 DHA 함유
+  - 혈액중 중성지질 수치율 낮추는 역할
+  - 원할한 혈액 흐름에 도움
+  - 염증 발생을 감소시키고 면역체계를 똑똑하게 만들어줌
+  - 혈관 건강 및 기억력 개선. 막힌 혈관을 뚫어줌
+
++ 비타민 B군 (비플러스,이스트비)
+  - 에너지 대사 촉진
+  - 신경계 조절 역할
+  - 조혈작용
+  - 해독작용
+  - 간의 활동을 도와 간의독성, 피로물질 분해, 숙취해소
+  - 신경기능 활성화
+  - 항체 생성 및 해독 작용
+  - 면역기능 강화
+  - 적혈구 생성 및 담즙 생성(소화요소)
+
++ 칼맥디 / 비타민D
+  - 비타민D는 소장에서 칼슘, 인 흡수를 돕고 시장에서 칼슘의 재흡수 도움
+  - 면역 증강작용, 대장암, 임파선암, 유방암, 백혈병의 발병억제 작용
+
++ 레시틴
+  - 천연 계면활성제 작용 (콜레스트롤개선)
+  - 두뇌건강 - 뇌의 지질대사 혈액순환 촉진
+  - 당분배출 - 당뇨에 도움
+
++ 갈E 비타민
+  - 천연 항생제
+  - 패니실린의 100배로 강한 살균
+  - 혈중콜레스테롤수치 감소
+  - 항암효과최대
+  - 위암/결장암 예방
+
++ 코큐텐
+  - 코엔자임 큐텐은 세포 기능 유지를 위해 반드시 필요한 대사물질로 유해산소로 인한 세호의 산화를 억제하는 항산화 작용에 도움
+  - 높은 혈압 감소
+  - 심혈관 및 피부건강
+  - 부족시 심장근력이 약해져 혈액 공급이 원할해지지 않음
+
++ 카로틴플러스
+  - 두나리엘라 조류에서 추출한 베타카로틴을 제공
+  - 피부와 점막 형성 및 기능 유지
+  - 면역력 향상
