--- a/_posts/winners/biz_lecture/2023-07/2023-07-25-N&B-(이신우 리더).md
+++ b/_posts/winners/biz_lecture/2023-07/2023-07-25-N&B-(이신우 리더).md
@@ -17,6 +17,75 @@ audio_file : assets/amway/audio/2023-07-25-N&B-(이신우 리더).mp3
 
 <audio src="{{ page.audio_file | relative_url }}" controls loop></audio>
 
+
 ## N&B / 이신우 리더 (7/25)
 
-+ 
++ 꿈의 실현
++ 꿈... 아파트나 물건이 아니다
++ 암웨이를 그만뒀으나, 여행이라는 꿈에 대한 열정이 피어남.
++ 다시 하기로 결심.
++ 한 번의 '긍정의 스위치'로 바뀌면 좋으나 현실은 천천히 바뀐다
++ 아이에게 양치하는 습관주기
+  - 하나 하나 알려주면서 성인이 될 때까지
++ 암웨이도 깨닫는 순간까지 행동
+  - 행동해야 결과가 나온다
++ 꿈을 갖는다는 것은 안해봤던 것을 하는 것
++ 꿈꾸는 것을 긍정적으로 가져라
++ 꿈... 갖고 싶은 것을 적어라
+  - 적는 것이 중요하다
++ 꿈이 커야 한다
+  - 적당히 큰 꿈에 무너진다
++ 상황은 똑같아도, 내 상황에 따라 받아들이는 마음가짐이 달라진다
++ 목표가 있는 사람만 Show The Plan을 한다
++ 3-4개월 안에 브랜드체인지가 되어야 한다
++ 브랜드체인지를 통해 경험을 나눠라
++ 암웨이는 모자라는 사람이 더 잘한다
+  - 후원은 '좋은 사람'이 되면, 좋은 사람이 온다
++ 목표를 스폰서와 함께 세워라
++ 할 수 있다는 믿음이 성공으로 이끈다
++ 내 의문이 스스로 해결되어야 한다
+  - 내가 먼저 풀리지 않았는데, 후원을 할 수 없다
++ "나는 못해"
+  - 배우면 가능하다
++ "성공 확률이 낮잖아"
+  - 회사 다니면 더 성공하기 힘들다
+  - 암웨이는 끝까지 하면 된다
++ 10코어
+  - 성공한 모든 사람들이 책을 읽는다
+  - 가난한 사람 2%만 책을 읽지 않는다
+  - 책을 읽지 않으면 신념이 없어지는 날이 온다
+  - 음원은 편식하지 마라
+  - 본인에게 힘이나는 음원을 정해서 힘이 필요할 때 들어라
+  - 미팅을 편식하지 마라
++ 명단작성
+  - 청첩장을 보내듯 해라
+  - 사람이 아니라, 제품 쓸 사람을 찾으면 쉽다
+  - 내가 알고 있는 사람을 다~ 쓴다
+  - 그리고 업데이트를 계속 해서 한다
+    - 가족 / 친구 / 선후배 / 동창 / 이웃 / '과일가게 아줌마'
+    - 군대 / 종교 / 동호회
+  - 감사하는 사람도 쓴다
+  - 그냥 다 쓰고, 그 중에서 '선별' : '누구한테 갈 것인가?' 우선순위
++ STP
+  - 논리적이고 잘한다고 해서 최선은 아니다
+  - 열정이 중요함
+  - 말로하는... 말만하는 STP는 효과가 없다. 반드시 써야한다
+  - 목표가 있는 사람은 훨씬 더 빨리간다
++ 상담
+  - 파트너가 스폰서에게 상담을 요청해야 한다
+  - 핀 = 능력 : 스폰서를 믿어라
+  - 안될 때일 수록 상담을 하라
++ 신뢰쌒기
+  - 거절을 두려워하지 말고 부정적인 생각을 멀리하라
+  - 나를 멀리하는게 아니라 '암웨이'를 멀리하는 것일 뿐
+  - 지금부터 다시 신뢰를 쌓아라
+  - 가장 가까운 사람부터 신뢰를 쌓아라
+  - 모든 것을 결정할 때, 상대방에게 유리한 쪽으로 맞춰라
++ 건강
+  - 성공해도 몸이 안좋으면 소용없다
+
++ 제일 중요한 것 3가지
+  - 미팅 / 음원 / 책읽기
+  - 추가 : 10코어 일지쓰기
+
+
