--- a/_posts/winners/biz_lecture/2023-07/2023-07-26-게스트스피치-(홍영상 리더).md
+++ b/_posts/winners/biz_lecture/2023-07/2023-07-26-게스트스피치-(홍영상 리더).md
@@ -10,7 +10,7 @@ toc: true
 toc_sticky: true
 
 date: 2023-07-26
-last_modified_at: 2023-07-26
+last_modified_at: 2023-07-27
 ---
 
 
@@ -23,4 +23,64 @@ last_modified_at: 2023-07-26
 
 ## 게스트스피치 / 홍영상 리더 (7/26)
 
-+ 
++ 암웨이의 첫 만남
+  - 동생(홍진희)이 먼저 시작했으나, '고정관념'이 있음
+  - 계속해서 노력하던 동생. 제품에 대한 이해와 끝없는 노력으로 마음이 살짝 열림.
+  - 가입을 했으나 변화는 없음. 
+
++ 사업에 대한 알아가는 단계
+  - 본인이 안하더라도, 동생이 하는 일에 대해서 알아보려는 마음
+  - 사업설명을 처음 듣게 됨
+  - '물건을 잘 파는 법'이 아니라, 수입의 원천에 대한 구조를 설명하는 자리
+  - 노후의 인세소득에 대한 관심이 생기기 시작
+  - 미래에 대한 희망으로 암웨이를 바라보게 됨
+  - 소비자를 늘려가는 단순한 사업임을 알게 됨
+  - 제품을 제대로 알아야겠다는 생각으로 매장을 방문
+
++ 암웨이에 대한 경험
+  - 브랜드체인지를 통해 제품들에 대한 경험을 시작
+  - 각종 세제들을 써보고, 실험도 해보면서 감동을 받기 시작
+  - 사람들을 만나면서 제품에 대한 전달과 사업을 본격적으로 시작하게 됨
+
++ 사업의 시작
+  - 이미 달성한 사람을 따라다니며 하나씩 배우기 시작
+  - 15% 달성. 약속을 지키는 암웨이에 감동하기 시작
+
++ 사업을 잘 하려면
+  - 3개월 SP
+  - 목표가 있으면 가능하다
+  - 과거에 비해 1000가지가 넘는 상품에도 3개월 SP가 힘든 이유는 목표가 없기 때문
+  - 모든 일이 그렇듯, 뭐든지 내가 하기 나름이고... 공짜는 없다
+  
++ 암웨이 사업
+  - 어느 정도 성과를 이루면서, 가족들로부터 인정받는 기쁨
+  - SNS 첨단회사, 암웨이.
+  - 소통이 있어야 하는 사업이 암웨이.
+
++ 약속을 세워놓으면 지켜라
+  - 건강도 내 노력으로 유지할 수 있다
+
++ 머리부터 발끝까지 암웨이가 되라
+  - 내가 써보지 않은 것을 남에게 전할 수 없다
+  - "내 몸 자체가 암웨이"
+
++ 나이가 들어서 평생 할 수 있는 암웨이
+  - 내가 알아보고 변화된 것에 감사
+
++ 가족들의 건강을 보면서 보람을 느낌
+  - 비타민으로 인한 변화
+
++ 젊은 암웨이 ABO
+  - 유튜브를 비롯한 매체들을... 채널을 통해 사업이 편해짐
+
++ 자산
+  - 국민연금으로만 준비했다면 자유롭게 살 수 있었을까?
+  - 순간의 선택(암웨이)이 평생 간다
+
++ 평생 할 수 있는 일
+  - 사업이 지금 안된다고 힘들어하지 마라
+  - 사람마다 각자 이뤄지는 시기가 다르다
+  - 노력을 하고 궁리를 하면 반드시 된다
+  - 꾸준함으로, 성실하고 전달을 잘하는 사람이 성공 한다
+
++ 성공은 우리의 마음에 달려있다
