--- a/_posts/winners/biz_lecture/2023-07/2023-07-27-비전과-가치-(이종은 리더).md
+++ b/_posts/winners/biz_lecture/2023-07/2023-07-27-비전과-가치-(이종은 리더).md
@@ -22,5 +22,124 @@ video_file : assets/amway/video/2023-07-27-비전과-가치-(이종은 리더).m
 
 
 ## 비전과 가치 / 이종은 리더 (7/27)
++ 부제 : 미래를 위한 가치 있는 선택
 
-+ 
++ 근거 없는 소문과 팩트
+  - 10% : 다른 사람 끌어들이는 것 / 파는 것 / 되는 사람 못봤다
+
++ 암웨이를 만나기 전 뇌구조
+  - 부모님 노후
+  - 자녀교육
+  - 자산만들기
+  - 건강관리
+  - 병원경영
+  - 대출상환
+  - 여행
+  - 나는 언제 시간의 자유를 얻을 수 있을까?
+  - 10년 뒤에도 이 수입을 지속할 수 있을까? 
+  - 커리어에서도 soft landing 하고 싶다
+  - 공간 안의 답답함과 수입에 대한 불안감
+
++ 생애 주기와 소득 및 소비의 관계
+  - 일생 동안 소득과 소비는 생애 주기에 따라 다르게 나타난다.
+  - 소비 생활은 평생에 걸쳐 이루어지지만, 소득을 얻을 수 있는 기간은 한정적이다.
+  - A : 소득 < 소비
+  - B : 소득 > 소비
+  - C : 소득 < 소비
+
++ '부자 아빠 가는한 아빠' / 로버트기요사키
+  - 노동수입 영역
+    - E : Employee 급여생활자
+    - S : Self-employed 자영업, 전문직
+  - 자산수입 영역
+    - B : Business Owner 사업가
+    - I : Investor 투자자
+  - 세 가지 사업 시스템
+    1. 시스템 개발 : 창업
+    2. 시스템 구매 : 프랜차이즈
+    3. 시스템 활용 : 네트워크 마케팅
+  - 모든 물통은 결국 마르기 마련이다
+    - 파이프라인을 구축해야 함
+
++ 옥스퍼드 대학의 마이클 오스본 교수
+  - <고용의 미래> 보고서
+  - 20년 이내 현재 직업의 47%가 사라질 것
+  - 인명구조원 / 은행원 / 동물 사육사 / 회계사 / 약사 / 배우 / 교사 등등
+
++ 서울대 공학부 / 유기윤 교수
+  - "모든 산업 분야는 개인이건 조직이건 간에 다 플랫폼화 될 겁니다."
+  - "플랫폼의 소유주에게 거의 모든 권력과 부를 집중시키는 형태로 발전하고 있습니다."
+
++ 유통형태
+  - 생산자 >>>>>>> 플랫폼(카카오/구글/아마존 등) >>> 소비자
+  - 생산자(Amway) >>>>>> 플랫폼(ABO) >>>>>>>>>>>>> 소비자
+
++ 암웨이는 마트다
+  - 회사형태 : 농장보유, 직접제조
+  - 소비자 : 무료회원제
+  - 국내 판매처 : 온라인 쇼핑몰
+  - 포인트 : 매월 14일 현금 입금
+  - 반품(환불) : 만족보증제도
+  - 역사 : 1959년부터
+  - 진출국가 : 58개 국가 100여개 지역
+
++ 암웨이 브랜드
+  - 트렌디, 웰빙, 웰다잉, 생존품
+  - 남녀노소, 가성비갑, 소비자만족보증
+
++ Amway?
+  - 마트 바꿔서 연금성 추가소득 만드는 일
+  - 소비 > 지출 > 매출 > 소득
+
++ 암웨이 회원의 혜택
+  - 무료 회원 가입
+  - 고품질 가섯ㅇ비 높은 생필품
+  - 빠른 무료 택배(6만원 이상)
+  - 고객만족보증제도(90일내)
+  - 현금 cash back
+  - 여행
+  - 자산 소득
+  - 상속
+
++ 지구에 대한 우리 회사의 사명
+  - 암웨에는 지구의 한정된 자원과 환경을 올바르게 사용하고 관리하는 것이 기업과 개인 모두의 책임이라고 믿는다.
+  - 암웨이는 전세계에 3백만 명 이상의 디스트리뷰터로 이루어진 독자 판매망을 가지고 있는 유수한 소비재 제조업체로서 건전한 환경보호 활동의 추진에 대한 자기의 책무와 역할을 인식한다.
+
++ Amway Vision & Value
+  - 비전
+    - 모든 사람에게 보다 윤택한 삶의 기회를 제공
+  - 창업이념
+    - 창립자인 리치 디보스와 제이 밴 엔델이 암웨이를 시작하게 된 동기
+    - 자유 / 가족 / 희망 / 보상
+
++ Amway Cash Back
+  - 비밀은 '유통'에 있다
+  - 과거에 소비자가 지불하던 '광고/유통비'(500원)을 소비자에게 돌려주는 암웨이
+  - 에디슨 마케팅상 수상
+  - 2-5년 플랜
+  - 무자본 / 무점포 / 무경험
+  - 부업 / 남는 시간 / 인세수입
+  - 매달 / 증가 / 평생 / 상속
+
++ 근거 없는 소문과 팩트의 진실 (팩트)
+  - 다른 사람의 성공을 돕는 일
+  - 인세 소득원
+  - 꿈을 이루는 일
+  - 무위험 / 무자본 / 무점포
+  - 선착순 아닌 노력순
+  - 제품 애용하는 집단을 만드는 일
+  - 리더의 자세 습득
+  - 회사 신용등급 SA1
+  - 자유 / 가족 / 희망 / 보상
+
++ 내가 이 사업을 하는 이유
+  - 갖고 싶은 것 : 자산성 소득
+  - 하고 싶은 것 : 재정적 시간적 자유
+  - 되고 싶은 것 : 
+    - 자녀의 멘토, 든든한 딸
+    - 꿈꾸기를 멈추지 않는 사람. 매력적인 사람
+    - A total success
+    - Life enricher
+  - 암웨이는 성공자의 안목과 자세를 배우는 최고의 플랫폼
+
++ Be life-enrichers!
