--- a/_posts/winners/biz_lecture/2023-07/2023-07-31-게스트스피치-(이동산 리더).md
+++ b/_posts/winners/biz_lecture/2023-07/2023-07-31-게스트스피치-(이동산 리더).md
@@ -27,4 +27,72 @@ video_file2 : assets/amway/video/2023-07-31-게스트스피치-(이동산 리더
 
 
 ## 게스트스피치 / 이동산 리더 (7/31)
-+ 
+### 1부
++ 암웨이 사업은 나이를 먹어봐야 가치를 안다
+  - 30대 - 청첩장 소식 / 40대 - 부모님 상 / 50대 - 친구(본인) 상
+  - 친구들에 대한 안좋은 소식들.
+  - 오래 사는 것도 중요하지만, 어떤 질로 사는 것도 중요하다
+
++ 직장 생활과 지금의 생활
+  - 더 자고 싶지만 일어나야하는 현실
+  - 지금은 자고 싶을 때 자고, 깨고 싶을 때 깨는 삶
+  - 하고 싶은 일을 마음대로 하는 삶
+
++ 장모님 부고
+  - 아내가 6개월간 간병
+  - 직장 생활을 한다면 가능한 일 일까?
+
++ 성냥공장하시던 아버지
+  - 성냥 = 생필품 / 반복구매.... 40년 사업
+  - 라이터로 인한 사업의 실패
+  - 나무젓가릭으로 전환하였으나 실패
+  - 어머니 마저 일하시기에 가족이 마주하기 쉽지 않은 환경
+
++ 직장생활
+  - 가업이 망하고 보증으로 인한 빚
+  - 불우한 가정생활로 인한 우울함
+  - IMF까지 겹치면서 선배들의 퇴직을 경험
+  - 대출을 받아 주식까지 손해보던 시절
+  - 돈으로 인한 가족간의 불화
+
++ 암웨이와의 첫 만남
+  - 전혀 몰랐기때문에 편견없이 받아들일 수 있게 됨
+  - 부업으로 할 수 있는 암웨이에 대한 기대감이 컸음
+  - 와이프와 함께 미팅에 초대되어 바르게 알게 됨
+
++ 미팅
+  - 미팅이 중요하다
+  - 아무리 내가 잘해도 '미팅'이 없으면 믿음을 쌓아주기 힘들다
+  - 주변에게 전했지만, 거절을 통해 힘이 빠졌던 시기.
+  - 어려운 용기를 내서 가족들에게 먼저 STP를 해보게 됨
+  - 미웠던 누나가 오히려 암웨이를 알고 더 친해지는 계기가 됨
+
+
+### 2부
++ 버전을 보게 된 누나
+  - 열정과 진정성에 감동한다
+  - 6개월만에 SP
+  - 누나를 시작으로 2레그 발전
+
++ 간절함
+  - 부진한 레그들과 힘들었던 사업
+  - "난 이거 아니면 안된다"는 생각
+  - 포기하지 않게 된 계기
+  - 힘들었지만 자리를 지키고, 다시 소비자들이 모이게 됨
+
++ 여행 성취
+  - 성공했다는 자부심이 생김
+  - 그만뒀던 사업자들을 다시 만나게 됨
+  - 교만했었던 자신을 되돌아보게 됨
+  - 긍정에 비중을 두게 됨
+
++ 다시 시작
+  - 거부하던 부부가 PT가 됨
+  - 진정성 있게 만나니 된다
+  - "영감은 신이 주신 계시다"
+  - 다시 만난 사람들에게 다시 변화된 나를 보여주게 됨
+  - 힘들게 반대하던 사람들도 다시 시작하는 계기가 됨
+
++ 부정적인 만남
+  - 문전박대를 당하는 경험을 통해 힘이 생기게 됨
+  - 완강히 반대하는 사람들이 함께하는 모습을 보면서 힘이 생기는 계기
