--- a/_posts/thinking/self_development/2023-08-01-떄려치울지-버티며-계속할지-구별하는-기막힌-방법-(김창옥).md
+++ b/_posts/thinking/self_development/2023-08-01-떄려치울지-버티며-계속할지-구별하는-기막힌-방법-(김창옥).md
@@ -19,4 +19,63 @@ last_modified_at: 2023-08-01
 
 ## 때려치울지 버티며 계속할지 구별하는 기막힌 방법 / 김창욱 강사
 
-+ 
++ 인생은 살다보면 지루해 진다
+  - 음식/옷 등등이 사람에게 지루해진다
+  - 옷도 몸에 힘이 있을때 갖춰입게 됨
+
+
++ 우리는 그래서 못하는게 있고, 그래도(그럼에도 불구하고) 하는게 있다.
+  - 힘들어서 못하는 건지? 아니면 방향을 바꿔야하는 건지?
+  - 선택하는 지혜가 필요하다
+  - 구분하고 선택하지 못했다 하더라도, 인생은 소중하다
+  - 본인을 돌아보되, 자신을 나무라지 마라.
+  - "꽃이 피지 못하고, 열매를 맺지 못해도... 당신은 나무다"
+  - 사람들에게 유익하지 못하는 인간이 되더라도 우리는 소중하다
+  - 우리는 "쓸모있는 인간이 되어라"라는 말을 많이 들어왔다
+  - 그 속에서 지쳐갔다
+
+
++ 나무에 꽃이 핀다
+  - 나무에 꽃이 피면 사람들은 좋아한다
+  - 꽃이 피면 사람들이 오고 곁에 있고 싶어한다
+  - 모든 열매는 꽃이 져야 비로소 맺을 수 있다
+  - "꽃은 자존심, 인격은 열매"
+  - 나이가 먹어서 인격의 냄새가 나야지 자존심의 냄새가 나면 안된다
+  - 자존심의 꽃이 떨어져야, 꼭 열매가 시작된다
+  - 인간은 자존심 상하면 죽는다 -> 자존심 쌘 사람
+  - 꽃이 떨어졌다고 나무가 죽지 않는다
+  - 자존심이 떨어지면... 새로운 열매의 시기가 온다는 것을 알자
+  - 꽃이 피지도 열매 맺지 않아도 우리는 나무다
+
+
++ 후회 없이 선택하기
+  - "웨이트트레이닝" : 지구 중력을 거스르는 것
+  - 이로인해 힘이 생기고 아름다움이 생김
+  - "중력" : 지구상에 존재하는 법칙
+  - 일하는 것 / 돈버는 것 / 인간관계... 힘든 것
+  - "이것은 힘이 생기는 힘인가, 건너가야 할 힘인가?"
+  - 좋아하는 것과 좋아보이는 것 : 댓가지불을 하느냐 마느냐의 차이
+  - 댓가를 지불하는 의지나 감정을 투자하고 싶은 것....그게 진정으로 좋아하는 것
+
+
++ 댓가를 지불해야 하는 일 VS 댓가를 지불하지 않을 일
+  - 구분이 중요하다
+  - CS 루이스 / "인간을 속이는 31가지 방법" 中
+    - "인간에게 계획을 하게 하라. 그리고 내일부터 하라고 하라. 인간에게 '내일'은 없다"
+    - "인간은 괴롭히는게 아니라, 도와주고 속이는 것"
+  - 삶은 '내일'은 없다
+  - 인간은 오직 '지금 여기'에만 존재한다
+
+
++ 감정 VS 의지
+  - 우리는 감정 중심이 진실한 삶인지 알고 착각한다
+  - '감정'이 아니라 '의지'로 해야한다
+  - '좋은 의지'를 잡으려면 '좋은 지식'이 필요하다
+  - 좋은 지식 : 학문이 아님. 세상의 이치. 따뜻한 에너지. 지혜
+  - 우리에겐 '좋은 지식'이 필요하다
+  - 정말 가야하는 길이라면, '감정'이 아니라 '의지'가 필요하다
+
+
++ 반드시 잊지 말아야 할 것!!
+  - 꽃을 피우지 못하고 열매 맺지 못해도
+  - 그래도 우린 '나무'다!
