--- a/_posts/thinking/self_development/2023-08-01-떄려치울지-버티며-계속할지-구별하는-기막힌-방법-(김창옥).md
+++ b/_posts/thinking/self_development/2023-08-01-떄려치울지-버티며-계속할지-구별하는-기막힌-방법-(김창옥).md
@@ -2,7 +2,7 @@
 title:  "때려치울지 버티며 계속할지 구별하는 기막힌 방법 : 김창옥 강사" 
 
 categories:
-  -  [Self development, Thinking]
+  -  Self development
 tags:
   - [Amway, Thinking]
 
