--- a/_posts/winners/biz_lecture/2023-08/2023-08-02-N&B-네트워크-구조조정-수익구조-후속조치-(정미경 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-02-N&B-네트워크-구조조정-수익구조-후속조치-(정미경 리더).md
@@ -10,7 +10,7 @@ toc: true
 toc_sticky: true
 
 date: 2023-08-02
-last_modified_at: 2023-08-03
+last_modified_at: 2023-08-04
 ---
 
 
@@ -19,5 +19,172 @@ last_modified_at: 2023-08-03
 
 
 ## N&B - 수익구조. 네트워크 구조조정. 후혹조치 / 정미경 리더 (8/2)
+### 부제 : 네트워크 구조조정 -> 탄탄한 네트워크 설계하기
 
-+ 
+### 탄탄한 네트워크 설계하기
++ 너비(Width)와 깊이(Depth)의 균형
+  - 레그 수(Width) - 수익성
+  - 레그 깊이(Depth) - 안정성
+  - 보통 3레그 7뎁스를 하라고 추천
+
++ 3레그 7depth
+  - 브파, 브빌, 더블이글
+  - 지인별로 그룹 잘 분류할 것(명단작성)
+
++ 초기 회원가입 시 스폰서와 상담 필수
+  - 가입과 탈퇴는 쉬워도, 변경은 힘들다
+  - 신중하게 스폰서와 상담하여 그려나갈 것
+  - 8월 31일까지 갱신기간 잘 활용할 것
+
+
+### 수익구조 : PF24 내 연봉 내가 정하기
++ 암웨이 사업은...
+  - 암웨이는 내 사업
+  - 내 연봉은 내가 정한다
+  - 나는 2024 회계연도에 얼마를 벌고 싶은가?!
+
++ 이해하지 않으면 소유할 수 없다!
+  - 그런데 왜 이해하지 못하는 걸까?
+    - 소유하려고 하지 않으면 이해할 수 없다
+  - 이해보다 먼저 해야할 일은
+    - "마음에 품기!"
+
++ 수익구조 - 보상 프로그램
+  1. 코어 보너스 (회사의 기본급)
+    - Amway 보상플랜의 근간
+    - 월간 : 후원수당(1차보너스), 리더십, 루비, MD
+    - 연간 : EMR, Dia, Dia+
+  2. 코어 플러스 인센티브
+    - 코어 보너스에 추가되는 인센티브 개념
+    - 월간 : 브론즈빌더, 퍼포먼스 플러스/엘리트, 연속달성인센티브
+    - 연간 : 퍼스널그룹성장, 프론트라인성장, FAA인센티브
+  3. NCA
+    - Non-Cash Award : 여행, 세미나
+  4. TTCA
+    - EDC이상 Two Time Cash Award
+  5. FAA
+    - DIA이상 창업자 성취상
+
++ 수익구조 - Core 보너스(Sales & Marketing Plan) 한눈에 보기
+  - 월간 보너스
+    - 후원수당 (1차)
+      - 3% ~ 21%
+    - 리더십 (2차)
+      - BV 6%
+    - 루비
+      - 루비 BV 2%
+    - MD
+      - MD BV 1%
+  - 연간 보너스
+    - Emerald / Diamond / Diamond+
+    - 전체 BV의 0.25%
+    - 한국암웨이 해당 핀 계산총액 * (본인의 점수치/총합계 점수치)
+
++ 수익구조 - PF24 연속 달성 인센티브
+  - 플래티늄 : 170 / 170
+  - 파운더스 플래티늄 : 350 / 350
+  - 사파이어 : 460 / 460
+  - 파운더스 사파이어 : 690 / 690
+  - 에메랄드 : 920 / 920
+  - 파운더스 에메랄드 ; 1,150 / 1,150
+  - 다이아몬드 : 1,440 / 1,440
+  - 파운더스 다이아몬드 ; 1,730 / 1,730
+
++ 수익구조 - 퍼스널그룹 성장 인센티브
+  - PQ달성한 월의 1차보너스(후원수당)을 합하여 해당 비율로 계산
+  - 만약 첫 PT달성하고 1차보너스 200만원이면 퍼스널 성장 보너스는 : 200만 * 7개월 * 50% = 700만
+  - PQ지급비율
+    - 1~11개 유지 : 30%
+    - 12개 유지 35%
+    - 1~5개 성장 : 40%
+    - 6개+ 성장 : 50%
+
++ 수익구조 - 프론트라인 성장 인센티브
+  - FQ란?
+    - 본인이 후원하는 레그로부터 발생한 21% 유자격 월
+    - 지급대상 : F.PT 이상
+
++ 수익구조 - 내 연봉 내가 정하기!
+  - PT 보상플랜 : 총 2,390만원
+  - F.PT 보상플랜 : 총 5,128만원 + 푸꾸욱
+
++ ***암웨이 연봉***은 단순한 수입이 아니다, ***연금수입***으로 가는 징검다리이다."
+
+
+### 후속조치
+1. 후원의 과정
+  + 만남과 초대(25%) -> 사업설명(25%) -> Follow Up -> 사업시작 -> Follow Through
+    - Follow Up + Follow Through = 50%
+    - 팔로우 업(Follow Up) : 사업설명 후 사업을 시작할 수 있도록 돕는 과정
+    - 팔로우스루(Follow Through) : 사업을 결심한 후 성공적으로 사업을 진행 하도록 지원하는 과정
+
+2. 후속조치의 과정
+  + 단순 소비자 -> 애용자
+  + 애용자 -> 사업자
+  + 사업자 -> 찐 삿업자
+
+3. 단순 소비자 -> 애용자 만들기(1)
+  + 소비자가 애용자가 되고 애용자가 사업자가 되는 사업
+  + 일주일에 1회 이상 지속적인 만남
+  + 데몬, 샘플 전달
+  + 카다로그 훓어주기
+    - 3~4회에 걸쳐 진행
+    - 제품을 한번도 안 써본 사람의 경우 원포원부터 훓어주는 것도 좋음
+  + 체계적인 건강공부 시켜주기
+    - 잘못된 식생활이... 음식이 나다 등의 객관적인 자료와 책으로 건강공부 해주기
+
+3. 단순 소비자 -> 애용자 만들기(2)
+  + 음원이나 유튜브 영상 보내기 - 제품 뿐 아니라 간단한 사업설명 자료 보내주기
+  + 반복적인 사업설명
+    - 회사소개, 수익구조 이해시키기 (STP를 해야 소비자가 회사의 제품에 대해 믿음을 가질 수 있고 스스로 쓰는 자발적 소비자, 마감하는 소비자, 애용자가 될 수 있음)
+    - 제품을 쓰는 것만으로도 얻을 수 있는 이익에 대해 설명하는 것은 ABO들의 의무이고, 소비자의 권리
+  + 캐쉬백의 경험 누적시키기
+  + 미팅초대 - 홈미팅 뿐 아니라 시스템 미팅에도 초대, 한번이라도 와본 사람은 반드시 애용자가 됨
+
+4. 애용자 -> 사업자 만들기
+  + 제품 체험과 제품 감동, 캐시백의 경험을 사업의 기회로 연결
+  + 음원 프로모션 활용 - 한달에 20개 이상의 음원을 듣는 사람은 사업에 관심이 생김
+  + 추가수입에 대한 관심 - 브파에 도전!!
+  + 사업설명, 제품설명을 할 수 있도록 공부하고 도와주기
+  + 초대, 초대, 초대 - 시스템에 안착할 수 있도록 안내
+
+5. 사업자 -> 찐 사업자 만들기
+  + 파트너와 함께 겨과를 만들어 내는 과정
+  + 위너스 시스템에 완전히 안착 시키기 - 100프로 미팅참석, 텐코어, 100프로 브랜드 체인지 안내
+  + 암웨이 사업은 '잡은 물고기에 밥 주는 사업' -> 데리고 살기
+  + 파트너의 명단 작성을 통해 구체적인 목표 설정
+  + 브빌, SP에 도전하기
+
+6. 성공적인 후속조치를 위한 TIP
+  + 사업설명 이후 48시간 이내에 다시 만난다
+  + 첫번째 "YES" 또는 첫번째 "NO"에 흔들리지 않는다
+  + 지금 가장 많이 해야하는 일은 '찾아가는 일대일 미팅' - 일대일 미팅의 수가 내 네트워크의 볼륨을 결정한다
+  + 한 사람을 꾸준히 지속적으로 후원한다
+  + 후원지수 = 관게지수
+    - 무조건 먼저 친해져라
+    - 암웨이 사업에서 친해진다는 의미는? 사업자로서 믿음을 주는 것
+
+7. 나부터 찐찐 사업자 되기
+  + 후속조치의 시작은 '나부터 후원하는 것'
+  + 나는 암웨이 하는 사람인가, 암웨이 사업하는 사람인가?
+  + 내가 제대로 된 원본이 되지 않는다면?
+  + 나같은 파트너 6명이면 다이아몬드다!
+  + 타성에 젖은 후속조치로는 아무도 후원되지 않는다
+    - 흔들리지 않는 스폰서가 되어야 됨
+
++ 암웨이 사업을 포기하지 않고 끝까지 해내는 사람은?
+  - 모든 문제를 남에게서 찾는 사람 VS 모든 문제를 나에게서 찾는 사람
+  - 나는 남을 바꿀 수 없다
+    - 바뀐 나를 보고 남이 스스로 바뀌어 후원되는 일
+
++ 후속조치란?
+  - 자기후원 > 애용자 > 사업자 > 찐사업자... 다시, 자기후원
+  - 이 과정을 무한 반복
+
++ 반복에 지치지 않는 자가 성공한다?
+  - 인생은 끊임없는 반복. 지치지 않는 자가 성취!
+  - 확실한 목표 필요
+
++ PF24의 나의 목표는?
+  - 연봉 5000만원 내꺼!
+  - 푸꾸옥 가족여행 내꺼!
