--- a/_posts/winners/biz_lecture/2023-08/2023-08-04-아무리봐도-암웨이만한-일은-없다-(김정훈 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-04-아무리봐도-암웨이만한-일은-없다-(김정훈 리더).md
@@ -14,7 +14,7 @@ last_modified_at: 2023-08-04
 ---
 
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/JIeIatktdFc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/watch?v=JIeIatktdFc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 
 ## 아무리 봐도 암웨이만 한 일은 없다! / 김정훈 리더 (8/4)
