--- a/_posts/winners/biz_lecture/2023-08/2023-08-04-아무리봐도-암웨이만한-일은-없다-(김정훈 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-04-아무리봐도-암웨이만한-일은-없다-(김정훈 리더).md
@@ -11,7 +11,14 @@ toc_sticky: true
 
 date: 2023-08-04
 last_modified_at: 2023-08-04
+video_file : assets/amway/video/2023-08-04-아무리봐도-암웨이만한-일은-없다-(김정훈 리더).mp4
 ---
+
+
+<video width="90%" muted autoplay controls>
+    <source src="{{ page.video_file | relative_url }}" type="video/mp4">
+</video>
+
 
 
 <iframe width="560" height="315" src="https://www.youtube.com/watch?v=JIeIatktdFc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
