--- a/_posts/winners/biz_lecture/2023-08/2023-08-03-암웨이-성공스토리-(손재모 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-03-암웨이-성공스토리-(손재모 리더).md
@@ -21,4 +21,15 @@ last_modified_at: 2023-08-04
 ## 암웨이 성공 스토리 / 손재모 리더 (8/3)
 ### 부제 ; 강한 가족, 강한 부모 만들어준 암웨이
 
-+ 
++ 26살에 암웨이 시작
+  - 다이아 17년 걸림
+  - 암웨이만 봤을때 느린듯 보이지만, 다른 직업이랑 비교하면 다르다
+  - PC방에서 처음 알게 됨
+  - PC방 사장님이 암웨이를 소개 받게 됨
+  - 암웨이 편파방송과 사회의 편견, 고정관념이 있었고 싫었다
+  - 도서관에서 암웨이에 관한 '네트워트 마케팅'에 관한 책이 있는 것을 알고 궁금증이 생김
+  - 도서관에서 빌린 3권, 2권 읽기 전에 비전을 봤다
+  - 시스템대로 그대로만 해서, 8개월만에 월 100만원을 받게 됨
+  - 미팅을 사장님 대신 가게되었고, 오히려 미팅에 참석하지 못한 사장님이 암웨이를 그만두게 됨
+  - 미팅은 최우선 순위로!
+
