--- a/_posts/winners/biz_lecture/2023-08/2023-08-03-암웨이-성공스토리-(손재모 리더).md
+++ b/_posts/winners/biz_lecture/2023-08/2023-08-03-암웨이-성공스토리-(손재모 리더).md
@@ -10,7 +10,7 @@ toc: true
 toc_sticky: true
 
 date: 2023-08-03
-last_modified_at: 2023-08-04
+last_modified_at: 2023-08-07
 ---
 
 
@@ -19,7 +19,7 @@ last_modified_at: 2023-08-04
 
 
 ## 암웨이 성공 스토리 / 손재모 리더 (8/3)
-### 부제 ; 강한 가족, 강한 부모 만들어준 암웨이
+### 부제 : 강한 가족, 강한 부모 만들어준 암웨이
 
 + 26살에 암웨이 시작
   - 다이아 17년 걸림
@@ -33,3 +33,46 @@ last_modified_at: 2023-08-04
   - 미팅을 사장님 대신 가게되었고, 오히려 미팅에 참석하지 못한 사장님이 암웨이를 그만두게 됨
   - 미팅은 최우선 순위로!
 
++ 사업
+  - 기숙사나 옥탑방에서 STP 시작
+  - 버스나 지하철 타고 제품 전달하다가, 면허를 따고 '다마스'로 제품전달
+
++ 내 사업의 원칙
+  - 미팅
+  - 아무리 힘들어도 미팅은 참석한다
+  - 각자 사업의 원칙이 있는가?
+  - 순수하게 받아이들이기
+  - 내가 가진 생각을 내려놓고 받아들어야 한다
+
++ PT선포
+  - 갑자기 선언한 플래티늄
+  - 내뱉은 말을 지키기위한 노력
+  - 간절하고 다급해지니, 말을 못했던 사람들에게 전달하는 힘이 생긴다
+  - 내가 결단하고 도전해야, 내 파트너도 꿈을 가지고 도전한다
+
++ 에메랄드
+  - 내 꿈만 찾던 시절
+  - 시간이 지나고 나니, 이제야 파트너가 눈에 들어오기 시작함
+  - 같이 뛰자고 격려하고 내가 움직이니, 함께 성공하는 성과를 누리게 됨
+
++ 얻은 것
+  1. 자유로움
+    - 나는 자유로운가?
+    - 직장에서 자유로운가?
+    - 실제로 우리는 자유롭지 않은 삶을 살고 있다
+    - 나는 내 본업에서 이제 내가 원하는 일만 한다
+  2. 희망
+    - 어떤 일을 오래하면 희망적인가?
+    - 자영업이나 직장을 오래하면 희망이 없어진다
+    - 암웨이는 처음에 희망이 희미해도, 시간이 지나면 희망이 보인다
+    - '죽음의 수용소'... 희망은 선택
+    - 희망이 있으면 도전하고, 기대한다
+  3. 가족
+    - 가족의 행복
+    - 자녀의 행복은 강한 부모에서 나온다
+    - 외적..경제적으로 강해져야 한다
+    - 직장/자영업으로는 힘들다
+  4. 보상
+    - 물질적 보상 뿐만 아니라, 정신적 보상
+    - 꿈을 어떻게 꾸고, 어떻게 이뤄가는지... 실패를 어떻게 극복하는지를 배웠다
+  + 나는 온전한 수혜자이다.
